--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 {% block content %}
 
 		<h4 class="page-header">
-            Associacions <a href="{% url 'add_association' %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Nova</a>
+            Associacions <a href="{% url 'add_association' %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Afegir Nova Associació</a>
             <small>Llistat d'associacion asociades a l'usuari adminstrador</small> 
           </h4>
           <!-- Info boxes -->
