--- a/templates/association.html
+++ b/templates/association.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block sectionclass %}invoice{% endblock %}
+{% block sectionclass %}content{% endblock %}
 
 {% block title %}Fitxa de l'Associació{% endblock %} 
 
@@ -12,111 +12,164 @@
 
 {% block content %}
 
-		     <!-- title row -->
-          <div class="row">
-            <div class="col-xs-12">
-            	<div class="media">
-  					<div class="media-left">
-    					<a href="{{ association.url }}"><img class="media-object" src="{% if association.logotype %} {{ association.logotype.url }} {% else %} {% static "images/nologo.png" %} {% endif %}" alt="logo" style="width: 64px; height: 64px;"></a>
-  					</div>
-  				<div class="media-body">
-    				<h2 class="page-header">
-                	{{ association.name }} - <b>#{{ association.penyanumber }}</b>
-                	<small class="pull-right"> Data Creació: 2/10/2007</small>
-              		</h2>
-				  </div>
-				</div>	              
-            </div><!-- /.col -->
-          </div>
+		<!-- Info row -->
+        <div class="row">
+            <div class="col-md-12">
+            	<div class="box box-primary">
+	                <div class="box-header">
+	                  <div class="media">
+	  					<div class="media-left">
+	    					<a href="{{ association.url }}"><img class="media-object" src="{% if association.logotype %} {{ association.logotype.url }} {% else %} {% static "images/nologo.png" %} {% endif %}" alt="logo" style="width: 64px; height: 64px;"></a>
+	  					</div>
+		  				<div class="media-body">
+		    				<h3 class="page-header">
+		                	{{ association.name }} - <b>#{{ association.penyanumber }} <a href="{% url 'edit_association' association.id %}" class="btn btn-default"><i class="fa fa-edit"></i> Editar</a></b>
+		                	<small class="pull-right"> Data Creació: 2/10/2007</small>
+		              		</h3>
+						  </div>
+					  </div><!-- /.media --> 
+	                  <div class="box-tools pull-right">
+	                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+	                  </div>
+	                </div><!-- /.box-header -->
+	                <div class="box-body">
+	                	<div class="row invoice-info">
+				            <div class="col-sm-4 invoice-col">
+				              Dades:
+				              <address>
+				                <strong>{{ association.name }}</strong><br>
+				                {{ association.adress }}<br>
+				                {{ association.city }}, 25003<br>
+				                Telf.: {{ association.telephone }}<br/>
+				                Email: {{ association.email }}
+				              </address>
+				            </div><!-- /.col -->
+				            <div class="col-sm-4 invoice-col">
+				              Junta:
+				              <address>
+				                <strong>President:</strong> Daniel Rovira Romà<br>
+				                <strong>VicePresident:</strong> Eloi Aymerich Berenguer<br>
+				                <strong>Secretari:</strong> Ramon Usall<br>
+				                <strong>Diseny:</strong> Arnau Benet Marques<br>
+				              </address>
+				            </div><!-- /.col -->
+				            <div class="col-sm-4 invoice-col">
+				              <div class="info-box">
+				                <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+				                <div class="info-box-content">
+				                  <span class="info-box-text">Socis</span>
+				                  <span class="info-box-number">{{ totalmembers }}</span>
+				                </div><!-- /.info-box-content -->
+				              </div><!-- /.info-box -->
+				             </div><!-- /.col -->
+				          </div><!-- /.row -->
+	            	</div> <!-- /.box body -->            
+            	</div><!-- /.box -->
+          	</div> <!-- /.col -->
+         </div> <!-- /.row -->
          
-          <!-- info row -->
-          <div class="row invoice-info">
-            <div class="col-sm-4 invoice-col">
-              Dades:
-              <address>
-                <strong>{{ association.name }}</strong><br>
-                {{ association.adress }}<br>
-                {{ association.city }}, 25003<br>
-                Telf.: {{ association.telephone }}<br/>
-                Email: {{ association.email }}
-              </address>
-            </div><!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-              Junta:
-              <address>
-                <strong>President:</strong> Daniel Rovira Romà<br>
-                <strong>VicePresident:</strong> Eloi Aymerich Berenguer<br>
-                <strong>Secretari:</strong> Ramon Usall<br>
-                <strong>Diseny:</strong> Arnau Benet Marques<br>
-              </address>
-            </div><!-- /.col -->
-            <div class="col-sm-4 invoice-col">
-              <div class="info-box">
-                <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
-                <div class="info-box-content">
-                  <span class="info-box-text">Socis</span>
-                  <span class="info-box-number">{{ totalmembers }}</span>
-                </div><!-- /.info-box-content -->
-              </div><!-- /.info-box -->
-              <a href="{% url 'edit_association' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Editar Associació</a>
-              <a href="{% url 'add_uf' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Afegir Unitat Familiar</a>
-              <a href="{% url 'members_export' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Exportar Llistat Socis</a>
-              <a href="{% url 'members_import' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Importar Socis</a>
-            </div><!-- /.col -->
-          </div><!-- /.row -->
-		  
-          <!-- Table row -->
-          <div class="row">
-            <div class="col-xs-12 table-responsive">
-            </br>            
-              <table class="table table-bordered table-hover" id="ufs">
-                <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>Compte Corrent</th>
-                    <th>Família</th>
-                    <th>Tipus</th>
-                    <th>Núm Membres</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for uf in Ufs %}
-                	 <tr data-link="{% url 'uf' association.id uf.id %}">
-	                    <td>{{ uf.id }}</td>
-	                    <td>{{ uf.currentaccount }}</td>
-	                    <td>
-	                    {% for member in uf.member_set.all %}
-	                    	{% if forloop.first %} {{ member.firstsurname }} {{ member.secondsurname }} {% endif %}
-	                    {% endfor %}	
-	                    </td>
-	                    <td>
-	                    	{% if uf.typequote == 1 %}
-	                    	<span class="label label-success">Normal</span>
-	                    	{% elif uf.typequote == 2 %}
-	                    	<span class="label label-primary">Familiar</span>
-	                    	{% elif uf.typequote == 3 %}
-	                    	<span class="label label-warning">Jubilat</span>
-	                    	{% endif %}
-	                    </td>	                    
-	                    <td>{{ uf.member_set.all.count }}</td>	                 
-                  	 </tr>
-                  {% endfor %}              
-                </tbody>
-              </table>
-            </div><!-- /.col -->
-          </div><!-- /.row -->
+         <!-- table data -->       
+        <div class="row">
+	          <div class="col-md-12">
+	              <div class="box box-warning">
+	                <div class="box-header with-border">
+	                  <h3 class="box-title">Socis</h3>
+	                  <div class="box-tools">
+	                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+	                  </div><!-- /.box-tools -->
+	                </div><!-- /.box-header -->
+	                <div class="box-body" style="display: block;">
+	                	<div class="row">
+	                		<!-- Buttons -->
+		                	<div class="col-xs-12">				              
+				              <a href="{% url 'add_uf' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Afegir Unitat Familiar</a>
+				              <a href="{% url 'members_export' association.id %}" class="btn btn-default pull-right"><i class="fa fa-download"></i> Exportar Socis</a>
+				              <a href="{% url 'members_import' association.id %}" class="btn btn-default pull-right"><i class="fa fa-upload"></i> Importar Socis</a>
+				            </div>
+		                	<!-- Table -->
+							<div class="col-xs-12 table-responsive" style="padding-top: 10px;">
+					            </br>            
+					              <table class="table table-bordered table-hover" id="ufs">
+					                <thead>
+					                  <tr>
+					                    <th>#</th>
+					                    <th>Pagament</th>
+					                    <th>Família</th>
+					                    <th>Tipus</th>
+					                    <th>Núm Membres</th>
+					                  </tr>
+					                </thead>
+					                <tbody>
+					                  {% for uf in Ufs %}
+					                	 <tr data-link="{% url 'uf' association.id uf.id %}">
+						                    <td>{{ uf.id }}</td>
+						                    <td>{% if uf.currentaccount == '0.0' %} Efectiu {% else %} CC:  {{ uf.currentaccount }} {% endif %}</td>
+						                    <td>
+						                    {% for member in uf.member_set.all %}
+						                    	{% if forloop.first %} {{ member.firstsurname }} {{ member.secondsurname }} {% endif %}
+						                    {% endfor %}	
+						                    </td>
+						                    <td>
+						                    	{% if uf.typequote == 1 %}
+						                    	<span class="label label-success">Normal</span>
+						                    	{% elif uf.typequote == 2 %}
+						                    	<span class="label label-primary">Familiar</span>
+						                    	{% elif uf.typequote == 3 %}
+						                    	<span class="label label-warning">Jubilat</span>
+						                    	{% endif %}
+						                    </td>	                    
+						                    <td>{{ uf.member_set.all.count }}</td>	                 
+					                  	 </tr>
+					                  {% endfor %}              
+					                </tbody>
+					              </table>
+					            </div><!-- /.col -->
+						    <div class="row no-print">
+								<div class="col-xs-12">
+							    	<a href="invoice-print.html" target="_blank" class="btn btn-default"><i class="fa fa-print"></i> Imprimir Llistat Socis</a>
+							    </div>
+							</div>
+	                	</div>
+	                </div><!-- /.box-body -->
+	              </div><!-- /.box -->
+	           	</div><!-- /.col -->       
+           </div><!-- /.row -->        
+		
+		 <div class="row">
+	          <div class="col-md-12">
+				<div class="box box-default">
+		                <div class="box-header with-border">
+		                  <h3 class="box-title">Estadístiques</h3>
+		                  <div class="box-tools pull-right">
+		                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+		                  </div>
+		                </div><!-- /.box-header -->
+		                <div class="box-body">
+		                  <div class="row">
+		                    <div class="col-md-8">
+		                      <div class="chart-responsive">
+		                        <canvas id="pieChart" height="150"></canvas>
+		                      </div><!-- ./chart-responsive -->
+		                    </div><!-- /.col -->
+		                    <div class="col-md-4">
+		                      <ul class="chart-legend clearfix">
+		                        <li><i class="fa fa-circle-o text-red"></i> Efectiu</li>
+		                        <li><i class="fa fa-circle-o text-green"></i> Bancari</li>
+		                      </ul>
+		                    </div><!-- /.col -->
+		                  </div><!-- /.row -->
+		                </div><!-- /.box-body -->
+		                <div class="box-footer no-padding">
+		                  <ul class="nav nav-pills nav-stacked">
+		                    <li><a href="#">Efectiu <span class="pull-right text-red"><i class="fa fa-angle-down"></i> 12%</span></a></li>
+		                    <li><a href="#">salesChart <span class="pull-right text-green"><i class="fa fa-angle-up"></i> 4%</span></a></li>
+						</ul>
+		                </div><!-- /.footer -->
+		              </div><!-- /.box -->
+		         </div><!-- /.col -->       
+           </div><!-- /.row -->    
 
-          <!-- this row will not appear when printing -->
-          <div class="row no-print">
-            <div class="col-xs-12">
-              <a href="invoice-print.html" target="_blank" class="btn btn-default"><i class="fa fa-print"></i> Print</a>
-              <button class="btn btn-success pull-right"><i class="fa fa-credit-card"></i> Submit Payment</button>
-              <button class="btn btn-primary pull-right" style="margin-right: 5px;"><i class="fa fa-download"></i> Generate PDF</button>
-            </div>
-          </div>
-        </section><!-- /.content -->
         <div class="clearfix"></div>        
-
         
         <script>
         	jQuery(function($) {
