--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 
 {% block titlepage %}Llista d'associacions{% endblock %} 
 
+<!-- Left Menu -->
 {% block firstleftmenuname %}Llista Associacions{% endblock %}
 
 {% block firstleftmenu %} 
@@ -15,6 +16,12 @@
 	     {% endfor %}
 	{% endif %}
 {% endblock %}
+
+{% block calendarmenu %}
+ 
+{% endblock %}
+
+<!-- End Left Menu -->
 
 {% block content %}
 
