--- a/templates/add_association.html
+++ b/templates/add_association.html
@@ -100,8 +100,7 @@
 	                    <span class="input-group-addon"><i class="fa fa-link"></i></span>
 	                    {{ form.url|add_class:"form-control" }}
                   	  </div>                      
-                    </div>  
-                  
+                    </div>                    
                     <div class="form-group {% if form.logotype.errors %}has-error{% endif %}">
                       {% if association_id %}
                     	<a href="{{ form.url.value }}"><img class="media-object" src="{% if url_image %} {{ url_image }} {% else %} {% static "images/nologo.png" %} {% endif %}" alt="logo" style="width: 64px; height: 64px;"></a>
@@ -112,8 +111,16 @@
 	                    <span class="input-group-addon"><i class="fa fa-link"></i></span>
 	                    {{ form.logotype|add_class:"form-control" }}
 	                    <p class="help-block">Nomé format .png</p>
-                  	  </div>                      
-                    </div>     
+                  	  </div> 
+                  	  </div> 
+                  	  <hr>
+                  	  <h3> Configuració Google Calendar (Opcional)</h3>
+                  	  <div class="form-group {% if form.idcalendar.errors %}has-error{% endif %}">
+                      <label for="form.idcalendar.id_for_label">Id Calendari</label></br>
+                      {% if form.idcalendar.errors %}<label class="control-label" for="form.idcalendar.id_for_label"><i class="fa fa-times-circle-o"></i> {{ form.idcalendar.errors|striptags }}</label>{% endif %}
+                      {{ form.idcalendar|add_class:"form-control" }}
+                    </div>                    
+                    
 
                   <div class="box-footer">
                   	<div class="row">
@@ -126,7 +133,7 @@
                   </div>
                 </form>
               </div><!-- /.box -->
-
+          	
             <!-- fix for small devices only -->
             <div class="clearfix visible-sm-block"></div>            
            	</div>
