--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,6 +1,4 @@
-{% extends 'registration/base.html' %}
-
-{% block bodyclass %} register-page {% endblock %}
+{% extends 'base.html' %}
 
 {% block content %}
   	
