--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -52,7 +52,7 @@
         </div><!-- /.social-auth-links -->
 
         <a href="#">I forgot my password</a><br>
-        <a href="{% url 'registration_register' %}" class="text-center">Register a new membership</a>
+        <!--<a href="{% url 'registration_register' %}" class="text-center">Register a new membership</a>-->
 
       </div><!-- /.login-box-body -->
     </div><!-- /.login-box -->
